# rust_zip

./: Cargo.toml  README.md  diff.txt  ours.txt  theirs.txt
src/: main.rs
src/utils/: deflate.rs  helpers.rs  inflate.rs  main.rs  myunzip.rs  myzip.rs  records.rs  utils.rs  zipfile.rs
testdata/generic_data/: data_info.md
testdata/generic_data/bbrot/: bbrot.pgm
testdata/generic_data/cowsay/: cowsay.txt.deflate
testdata/generic_data/xkcd/: xkcd-327.txt
testdata/inflate/: data_info.md
testdata/lz77/: data_info.md
testdata/myzip0/: data_info.md
